major pos-processor upgrade